<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.columbia.jonathan.project_bestnote.NoteDetail">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="2"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_discard"
        android:orderInCategory="1"
        android:title="@string/action_discard"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="ifRoom|withText" />
</menu>
