<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/noteList">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/titleShow"
        android:id="@+id/title"
        android:layout_gravity="bottom|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:textColor="#ff000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/timeShow"
        android:id="@+id/time"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contentShow"
        android:id="@+id/content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff000000" />
</LinearLayout>