<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditCreate">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/linearLayout3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleEdit"
            android:layout_weight="5"
            android:hint="@string/titleHint" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:ems="10"
        android:id="@+id/noteEdit"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:background="@drawable/grid"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:padding="20dp"
        android:hint="@string/noteHint" />

</RelativeLayout>